applications/portfolio/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nextjs-app
  namespace: nextjs-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-nextjs-app
  template:
    metadata:
      labels:
        app: my-nextjs-app
    spec:
      containers:
        - name: my-nextjs-app
          image: fayemameibra/devops-portfolio:v0.0.3 # {"$imagepolicy": "flux-system:devops-portfolio-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
