applications/portfolio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nextjs-app
  namespace: nextjs-app
spec:
  selector:
    app: my-nextjs-app
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
